# MercuryKit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mercurykit/: __init__.py  __main__.py  archive.py  bfpk.py  binary.py  bits.py  cli.py  codecs.py  mirror_of_fate.py  mofh.py  progress.py  scanner.py  security.py
src/mercurykit/_bfpk/: __init__.py  blades_restore.py  codecs.py  engine.py  extraction.py  manifest.py  models.py  repack.py
tests/: test_bfpk_cli.py  test_binary.py  test_codecs.py
